kubernetes/apps/services/wordpress/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: voltkonekt-wordpress
  namespace: services
spec:
  hostnames:
    - "wordpress.samcloud.online"
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: wordpress
          namespace: services
          port: 80
